--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "happy-dom": "^20.0.11",
     "jsdom": "^27.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
