--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "i18n:check": "node ../scripts/check-i18n.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
