Refactor golangci-lint configuration to streamline linter and formatter settings, update CI workflow to use the latest golangci-lint version, and enhance error handling in downloader and converter components with appropriate nolint directives for subprocesses and deferred closures.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           files: ./coverage.out
           flags: backend
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
 
   go-lint:
@@ -83,10 +84,9 @@ jobs:
         working-directory: frontend
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.64.8
-          install-mode: goinstall
+          version: v2.1.6
           args: --timeout=5m
 
   # Frontend tests and linting
