--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,11 @@ jobs:
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic -short ./...
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           files: ./coverage.out
           flags: backend
+          slug: teofanis/ybdownloader
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
 
