--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
         working-directory: frontend
 
       - name: Wails build (Linux)
-        run: wails build -platform linux/amd64
+        run: wails build -platform linux/amd64 -tags webkit2_41
 
       - name: Check Go build (Windows cross-compile)
         run: GOOS=windows GOARCH=amd64 go build -o /dev/null .
