--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
 
       - name: Build Linux amd64
-        run: wails build -platform linux/amd64 -o ${{ env.APP_NAME }}-linux-amd64
+        run: wails build -platform linux/amd64 -tags webkit2_41 -o ${{ env.APP_NAME }}-linux-amd64
 
       - name: Create Linux package
         run: |
